# foxterm

./: .env.example  README.md  __init__.py  about.py  ansi.css  commands.js  index.css  index.html  index.js  pyproject.toml  terminal.js  ui.css
auth/: __init__.py  user.py
blueprints/: __init__.py
blueprints/github/: __init__.py
blueprints/index/: __init__.py
blueprints/index/static/css/: index.css
blueprints/index/static/js/: commands-old.js  commands.js  errors.js  index.js  markdown.js  terminal-old.js  terminal.js  window.js  windowManager.js
blueprints/index/templates/: index.jinja
blueprints/term/: __init__.py
config/: config.py
css/: index.css
database/: __init__.py  database.py
js/: commands.js  index.js  terminal.js
src/: about.py
src/auth/: __init__.py  permissions.py  user.py
src/blueprints/: __init__.py
src/blueprints/github/: __init__.py
src/blueprints/github/templates/: logged_in.jinja  logged_out.jinja
src/blueprints/index/: __init__.py
src/blueprints/index/static/css/: index.css  legacy.css
src/blueprints/index/static/js/: commands.js  index.js  terminal.js
src/blueprints/index/templates/: legacy.jinja
src/blueprints/term/: __init__.py
src/config/: __init__.py  config.py
src/database/: __init__.py  database.py
static/css/: 404.css
static/favicon/: site.webmanifest
static/filesystem/: about-me.txt  about.md  about.txt  aside.txt  todo.txt
static/fonts/: fonts.css  lineseed.css  splatoon1.css  splatoon2.css
static/js/: 404.js
templates/: 404.jinja
