[project]
name = "foxes-new"
version = "0.6.1"
description = "taggie waggie's website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "quart>=0.20.0",
    "quart-auth>=0.11.0",
    "quart-cors>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.45",
]
